# dotconfig

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: appimage.yml  release.yml
src/: cli.yml  main.rs  symlinks.yml
