[package]
name = "dotconfig"
version = "0.1.1"
authors = ["Michael Dorst <m@mdorst.net>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mfdorst/dotconfig"
description = """
A tool for symlinking configuration files from a central repository to their respective locations on
the system in a repeatable, configurable way.
"""
keywords = ["config", "dotfiles", "installer"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.4", features = ["derive"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
shellexpand = "2.1.0"
thiserror = "1.0.30"
yansi = "0.5.0"
# Required (for now) to resolve package version conflict between dependencies
proc-macro2 = "1.0.36"

[features]
