[package]
name = "dotconfig"
version = "0.2.0"
authors = ["Michael Dorst <m@mdorst.net>"]
edition = "2021"
license = "MIT/Apache 2.0"
repository = "https://github.com/mfdorst/dotconfig"
description = """
A tool for symlinking configuration files from a central repository to their respective locations on
the system in a repeatable, configurable way.
"""
keywords = ["config", "dotfiles", "installer"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.2"
shellexpand = "2.1.0"
thiserror = "1.0.31"
yansi = "0.5.1"

[features]
